--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-:root {
+ :root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -7628,14 +7628,14 @@ h1, h2, h3, h4, h5,
     right: -25px; }
   .owl-carousel.home-slider {
     position: relative;
-    height: 750px;
+    max-height: 750px;
     z-index: 0;
     background: #000000; }
     .owl-carousel.home-slider .slider-item {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
-      height: 750px;
+      max-height: 750px;
       position: relative;
       z-index: 0; }
       @media (max-width: 1199.98px) {
@@ -7650,7 +7650,7 @@ h1, h2, h3, h4, h5,
         background: #000000;
         opacity: .5; }
       .owl-carousel.home-slider .slider-item .slider-text {
-        height: 750px; }
+        max-height: 750px; }
         @media (max-width: 767.98px) {
           .owl-carousel.home-slider .slider-item .slider-text {
             text-align: center; } }
